--- a/CardRotation/Base.lproj/Main.storyboard
+++ b/CardRotation/Base.lproj/Main.storyboard
@@ -15,7 +15,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CardFront" translatesAutoresizingMaskIntoConstraints="NO" id="QDg-nM-6l7">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CardBack" translatesAutoresizingMaskIntoConstraints="NO" id="QDg-nM-6l7">
                                 <rect key="frame" x="114" y="313" width="186" height="270"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1ES-zb-s4f">
@@ -42,19 +42,25 @@
                                     <action selector="rotateLeft:" destination="BYZ-38-t0r" eventType="touchDown" id="lh4-fS-3gh"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CardFront" translatesAutoresizingMaskIntoConstraints="NO" id="YW0-om-VXK">
+                                <rect key="frame" x="114" y="313" width="186" height="270"/>
+                            </imageView>
                         </subviews>
                         <constraints>
                             <constraint firstItem="QDg-nM-6l7" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="BTp-bS-C51"/>
                             <constraint firstItem="QDg-nM-6l7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ekf-8e-6zh"/>
+                            <constraint firstItem="YW0-om-VXK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="FRJ-0v-WaC"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="L68-Vf-cwt" secondAttribute="bottom" id="K7d-wj-Jvx"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1ES-zb-s4f" secondAttribute="trailing" id="Tmk-U3-edX"/>
                             <constraint firstItem="L68-Vf-cwt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="VkD-Py-Q5N"/>
+                            <constraint firstItem="YW0-om-VXK" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="aD1-Y4-4kt"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="1ES-zb-s4f" secondAttribute="bottom" id="nWY-1L-hr2"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="cardImageView" destination="QDg-nM-6l7" id="wis-Jt-lhG"/>
+                        <outlet property="cardBackImageView" destination="QDg-nM-6l7" id="dsV-eE-4UE"/>
+                        <outlet property="cardFrontImageView" destination="YW0-om-VXK" id="sGS-MW-r5a"/>
                         <outlet property="leftRotateButton" destination="L68-Vf-cwt" id="DnD-ee-t2U"/>
                         <outlet property="rightRotateButton" destination="1ES-zb-s4f" id="BQ9-on-blA"/>
                     </connections>
@@ -65,6 +71,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="CardBack" width="186" height="270"/>
         <image name="CardFront" width="186" height="270"/>
         <image name="arrowshape.turn.up.left.fill" catalog="system" width="64" height="52"/>
         <image name="arrowshape.turn.up.right.fill" catalog="system" width="64" height="52"/>
